--- a/TP_Trait_Image.vcxproj.filters
+++ b/TP_Trait_Image.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="TP_Trait_Image.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="CTraitementImage.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CTraitementImage.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
